@@ -1,5 +1,9 @@
 # Copyright 2002-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo/src/catalyst/ChangeLog,v 1.516 2006/01/18 14:00:12 wolf31o2 Exp $
+# $Header: /var/cvsroot/gentoo/src/catalyst/ChangeLog,v 1.517 2006/01/18 14:10:23 rocket Exp $
+
+  18 Jan 2006; Eric Edgar <rocket@gentoo.org>
+  modules/generic_stage_target.py:
+  fix crash when no kernel is defined.  spacing issue
 
   18 Jan 2006; Chris Gianelloni <wolf31o2@gentoo.org> catalyst:
   This is 2.0_rc18.
